# asteroids

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  clean.bat  configure.bat  experiment_batch_render.cpp  install.bat  install.sh  main.cpp
res/shaders/: circle_frag.glsl  circle_vert.glsl  line_frag.glsl  line_vert.glsl  text_frag.glsl  text_vert.glsl  texture_frag.glsl  texture_vert.glsl  tri_frag.glsl  tri_vert.glsl
src/: asteroid.cpp  asteroid.hpp  bullet.cpp  bullet.hpp  button.cpp  button.hpp  exp.cpp  exp.hpp  framebuffer.cpp  framebuffer.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  helper.cpp  helper.hpp  homing_bullet.cpp  homing_bullet.hpp  index_buffer.cpp  index_buffer.hpp  input_manager.cpp  input_manager.hpp  opengl_errors.cpp  opengl_errors.hpp  peria_logger.hpp  peria_utils.hpp  physics.cpp  physics.hpp  shader.cpp  shader.hpp  ship.cpp  ship.hpp  texture.cpp  texture.hpp  transform.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.hpp  weapons.cpp  weapons.hpp
